# Projetct-FullStack-Twitter

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  pgloader.load  pyproject.toml
.github/workflows/: build.yml
musker/: models.py
musker/templates/: base.html  home.html  navbar.html
social/: settings.py
